<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:id="@+id/fragment_page_oneF"
             android:layout_height="match_parent"
             tools:context=".fragments.FragmentPageOneAdd">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/AAEditTextView_text"
            android:textSize="36sp"
            app:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/design_default_color_on_secondary"
            android:paddingTop="100dp"
            android:gravity="center_horizontal"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/employeeNameAdd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:hint="@string/AAEditTextName_hint"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/employeeTelephoneAdd"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:hint="@string/AAEditTextName_hintTelephone"/>

    <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/employeeAgeAdd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:hint="@string/AAEditTextName_hintAge"/>

    <CheckBox
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxMale"
            android:layout_marginTop="350dp"
            android:layout_gravity="center_horizontal"/>

    <CheckBox
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxFemale"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="380dp"/>

    <Button
            android:text="@string/AAButton_text"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAdd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"/>

</FrameLayout>