<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PageOneFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/AAEditTextView_text" android:textSize="36sp"
            app:fontFamily="sans-serif-condensed-medium" android:textColor="@color/design_default_color_on_secondary"
            android:paddingTop="100dp" android:gravity="center_horizontal"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            android:layout_gravity="center_horizontal" android:layout_marginTop="200dp"
            android:hint="@string/AAEditTextName_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber3" android:gravity="center_vertical"
            android:layout_gravity="center_horizontal" android:layout_marginTop="250dp"
            android:hint="@string/AAEditTextName_hintTelephone"/>
    <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber4" android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp" android:hint="@string/AAEditTextName_hintAge"/>
    <Button
            android:text="@string/AAButton_text"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="400dp"/>

</FrameLayout>