<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/custom_display_information_layout"
        tools:context=".DisplayEmployeeInformation">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            android:id="@+id/infoImage"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextViewName"
            app:layout_constraintTop_toBottomOf="@+id/infoImage"
            app:layout_constraintStart_toStartOf="@+id/infoImage"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/AAEditTextName_hintTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextViewTelephone"
            app:layout_constraintTop_toBottomOf="@+id/infoTextViewName"
            app:layout_constraintStart_toStartOf="@+id/infoTextViewName"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextViewAge"
            app:layout_constraintTop_toBottomOf="@+id/infoTextViewTelephone"
            app:layout_constraintStart_toStartOf="@+id/infoTextViewTelephone"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextViewSex"
            app:layout_constraintTop_toBottomOf="@+id/infoTextViewAge"
            app:layout_constraintStart_toStartOf="@+id/infoTextViewAge"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>